<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ObjectActivity">

    <ImageView
        android:id="@+id/circleObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle" />

    <Button
        android:id="@+id/flingDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fling_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/flingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fling_up"
        app:layout_constraintBottom_toTopOf="@+id/flingDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/flingLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fling_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flingDown"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/flingRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fling_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flingDown" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/zoomableView"
        app:layout_constraintTop_toBottomOf="@+id/zoomableView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/zoomableView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/zoomedView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#4CAF50"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>