<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UiActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/crossContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:padding="16dp"
                android:text="@string/lorem_ipsum" />

        </ScrollView>

        <ProgressBar
            android:id="@+id/crossSpinner"
            style="?android:progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <Button
        android:id="@+id/crossFade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cross_fade"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <FrameLayout
        android:id="@+id/flipFragment"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="@+id/crossFade"
        app:layout_constraintStart_toStartOf="@+id/crossFade"
        app:layout_constraintTop_toBottomOf="@+id/crossFade">

    </FrameLayout>

    <Button
        android:id="@+id/flipButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/flip_fade"
        app:layout_constraintEnd_toEndOf="@+id/flipFragment"
        app:layout_constraintStart_toStartOf="@+id/flipFragment"
        app:layout_constraintTop_toBottomOf="@+id/flipFragment" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/circleLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#a6c"
        app:layout_constraintEnd_toEndOf="@+id/flipButton"
        app:layout_constraintStart_toStartOf="@+id/flipButton"
        app:layout_constraintTop_toBottomOf="@+id/flipButton">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/circle_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/circleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/circle_fade"
        app:layout_constraintEnd_toEndOf="@+id/circleLayout"
        app:layout_constraintStart_toStartOf="@+id/circleLayout"
        app:layout_constraintTop_toBottomOf="@+id/circleLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>