<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitytransitions.TransitionMenuActivity">

    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <Button
        android:id="@+id/contentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/animated_transition"
        app:layout_constraintEnd_toEndOf="@+id/coverImage"
        app:layout_constraintStart_toStartOf="@+id/coverImage"
        app:layout_constraintTop_toBottomOf="@+id/coverImage" />

    <Button
        android:id="@+id/viewPagerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_pager_1"
        app:layout_constraintEnd_toEndOf="@+id/contentButton"
        app:layout_constraintStart_toStartOf="@+id/contentButton"
        app:layout_constraintTop_toBottomOf="@+id/contentButton" />

    <Button
        android:id="@+id/viewPager2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_pager_2"
        app:layout_constraintEnd_toEndOf="@+id/viewPagerButton"
        app:layout_constraintStart_toStartOf="@+id/viewPagerButton"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerButton" />
</androidx.constraintlayout.widget.ConstraintLayout>